...
                                    <stackView opaque="NO" contentMode="scaleToFill" distribution="fillEqually" spacing="12" translatesAutoresizingMaskIntoConstraints="NO" id="1SW-30-ppI">
                                        <rect key="frame" x="0.0" y="0.0" width="280" height="46"/>
                                        <subviews>
                                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="2e9-7X-2Dr" customClass="RoundedButton" customModule="Calculator" customModuleProvider="target">
                                                <rect key="frame" x="0.0" y="0.0" width="61" height="46"/>
                                                <color key="backgroundColor" red="0.50902348760000005" green="0.50902348760000005" blue="0.50902348760000005" alpha="1" colorSpace="deviceRGB"/>
                                                <accessibility key="accessibilityConfiguration" label="Clear"/>
                                                <fontDescription key="fontDescription" name="Menlo-Bold" family="Menlo" pointSize="24"/>
                                                <state key="normal" title="C">
                                                    <color key="titleColor" red="0.062745101749897003" green="0.062745101749897003" blue="0.062745101749897003" alpha="1" colorSpace="custom" customColorSpace="displayP3"/>
                                                </state>
                                                <userDefinedRuntimeAttributes>
                                                    <userDefinedRuntimeAttribute type="color" keyPath="highlightedColor">
...
                                                    <action selector="onClearPressed:" destination="BYZ-38-t0r" eventType="touchUpInside" id="mRK-Hv-zuS"/>
                                                </connections>
                                            </button>
                                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="yvB-To-7qX" customClass="RoundedButton" customModule="Calculator" customModuleProvider="target">
                                                <rect key="frame" x="73" y="0.0" width="61" height="46"/>
                                                <color key="backgroundColor" red="0.50902348760000005" green="0.50902348760000005" blue="0.50902348760000005" alpha="1" colorSpace="deviceRGB"/>
                                                <accessibility key="accessibilityConfiguration" label="Reverse sign"/>
                                                <fontDescription key="fontDescription" name="Menlo-Bold" family="Menlo" pointSize="24"/>
                                                <state key="normal" title="±">
                                                    <color key="titleColor" red="0.062745101749897003" green="0.062745101749897003" blue="0.062745101749897003" alpha="1" colorSpace="custom" customColorSpace="displayP3"/>
                                                </state>
                                                <userDefinedRuntimeAttributes>
                                                    <userDefinedRuntimeAttribute type="color" keyPath="highlightedColor">
...
                                    <constraint firstAttribute="width" secondItem="hxP-Ez-hjf" secondAttribute="height" multiplier="82:100" priority="500" id="93z-1w-igc"/>
                                </constraints>
                                <variation key="heightClass=compact" spacing="8"/>
                            </stackView>
                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="400" verticalHuggingPriority="251" horizontalCompressionResistancePriority="400" verticalCompressionResistancePriority="950" text="" lineBreakMode="headTruncation" baselineAdjustment="alignBaselines" minimumScaleFactor="0.5" translatesAutoresizingMaskIntoConstraints="NO" id="YWa
                                <rect key="frame" x="20" y="20" width="280" height="28"/>
                                <accessibility key="accessibilityConfiguration" identifier="Display"/>
                                <constraints>
                                    <constraint firstAttribute="height" constant="28" id="OsC-36-DIt"/>
                                </constraints>
                                <fontDescription key="fontDescription" name="Menlo-Regular" family="Menlo" pointSize="20"/>
                                <color key="textColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                <nil key="highlightedColor"/>
...
